--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,18 @@
   .animation-delay-300 {
     animation-delay: 300ms;
   }
+  .delay-100 {
+    animation-delay: 100ms;
+  }
+  .delay-200 {
+    animation-delay: 200ms;
+  }
+  .delay-300 {
+    animation-delay: 300ms;
+  }
+  .delay-400 {
+    animation-delay: 400ms;
+  }
 }
 
 @layer components {
